# 2026-05-31_lobotomy-corporation-twitch-character-playground

./: .env.example  .gitignore  README.md  frieren.sh  launch_playground.bat  make_shortcut.bat  make_shortcut.ps1  pyproject.toml
.charm/: CLAUDE.md  COORDINATION.md  charm.json  meta.json  session
.charm/kb/: INDEX.md  robot-sprite-candidates.md  sephirah-voices.md  swear-filter-research.md  tts-engine-decision.md  voice-cloning-research.md
.charm/kb/architecture/: _index.md  agent-behavior-model.md  character-layer-stack.md  sprite-extraction-algorithm.md
.charm/kb/conventions/: _index.md  character-def-format.md
.charm/kb/decisions/: 0001-hud-panel-layout-coordinate-independent.md  0002-connected-component-extraction.md  0003-per-layer-scale-on-4x-work-canvas.md  0004-layered-agent-behavior.md  0005-personality-skew-direction.md  0006-1d-grid-neighbor-query.md  0007-command-channel-model.md  0008-python-312-required-for-speak.md  _index.md
.charm/kb/domain/: _index.md  agent-behavior-glossary.md  lobcorp-10-characters.md  lobcorp-sprite-sheet-catalog.md  twitch-receive-and-whisper.md
.charm/kb/gotchas/: _index.md  autonomous-grouping-perturbs-command-tests.md  balloon-must-be-nine-sliced-not-smoothscaled.md  better-profanity-global-mutable-wordlist.md  calibrate-variant-indices-out-of-range.md  character-surface-binding.md  emotion-neighbor-record-lives-in-character.md  espeak-data-path-length-limit.md  facing-tracked-but-sprite-never-flipped.md  grid-cell-invariant-and-density-ceiling.md  group-slot-y-must-match-a-platform-top.md  group-slow-radius-bounded-by-arrive-test.md  grouped-walk-to-slot-time-is-unbounded.md  layer-scale-template-generalizes.md  lobcorp-sprite-set-shared-across-usernames.md  no-graphics-import-test-needs-subprocess.md  shared-neighbor-list-includes-self.md  short-stage-jump-and-nameplate-headroom.md  speak-gpu-device-and-cu128-wheel.md  speak-overlay-cleared-by-polling-not-callback.md  voices-wav-is-trimmed-not-full.md
.charm/prompts/: discovery.md  orchestrator.md  planner.md  reviewer.md  tester.md  worker.md
.charm/skills/: INDEX.md
.charm/skills/charm-reset-kb/: SKILL.md
.charm/skills/charm-restart/: SKILL.md
.charm/tickets/: T-001.md  T-002.md  T-003.md  T-004.md  T-005.md  T-006.md  T-007.md  T-008.md  T-009.md  T-010.md  T-011.md  T-012.md  T-013.md  T-014.md  T-015.md  T-016.md  T-017.md  T-018.md  T-019.md  T-020.md  T-021.md  T-022.md  T-023.md  T-024.md  T-025.md  T-026.md  T-027.md  T-028.md  T-029.md  T-030.md  T-031.md  T-032.md  T-033.md  T-034.md  T-035.md
.claude/: settings.json
docs/design/: sidescroller-contract.md  v0-vertical-slice.md
docs/research/: T-001-pygame-rendering.md  crowd-awareness-simulation.md  crowd-following-personality.md  lc-sprites.md  npc-emotion-models.md  npc-movement-steering.md  voice-cloning-improvements.md  voice-quality-proposal.md
launcher/: launch_all.cs  launcher.cs  robot_launcher.cs
research/: character-sim.md  twitch-chat.md
scripts/: setup_voices.py
tests/: conftest.py  test_background.py  test_character.py  test_character_defs.py  test_emotion.py  test_lobcorp_renderer.py  test_personality.py  test_platforms.py  test_speak_filter.py  test_sprite_extraction.py  test_steering.py  test_world.py
twitch_playground/: dev.py  main.py  settings.py
twitch_playground/assets/: character_defs.py  lobcorp_renderer.py  provider.py  sephirah_defs.py  sprite_extraction.py
twitch_playground/chat/: auth.py  bot.py  commands.py  eventsub.py
twitch_playground/render/: background.py  hud.py  scene.py  speech.py
twitch_playground/robot/: __init__.py  renderer.py  sephirah_renderer.py  server.py
twitch_playground/robot/static/: index.html
twitch_playground/sim/: character.py  personality.py  platforms.py  steering.py  world.py
twitch_playground/speak/: __init__.py  _kokoclone.py  filter.py  tts.py
