[project]
name = "twitch-playground"
version = "0.1.0"
description = "Lobotomy Corporation Twitch character playground"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pygame-ce>=2.4",
    "twitchio>=2.10,<3",
    "python-dotenv>=1.0",
    "Pillow>=10",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.scripts]
playground = "twitch_playground.main:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twitch_playground"]
