[project]
name = "twitch-playground"
version = "0.1.0"
description = "Lobotomy Corporation Twitch character playground"
# Bumped from >=3.10 for the speak feature: kanade-tokenizer (KokoClone voice
# conversion) hard-requires Python >=3.12. Matches the verified KokoClone spike.
requires-python = ">=3.12,<3.13"
dependencies = [
    "pygame-ce>=2.4",
    "twitchio>=2.10,<3",
    "python-dotenv>=1.0",
    "Pillow>=10",
    "numpy>=1.24",
    "scipy>=1.10",
    # Speak feature (KokoClone voice clone TTS + swear filter). See
    # twitch_playground/speak/. torch>=2.9 needs torchcodec for audio IO.
    "kokoro-onnx>=0.4",
    "misaki[en]>=0.8",
    "torch>=2.9",
    "torchaudio>=2.9",
    "torchcodec>=0.5",
    "soundfile>=0.12",
    "huggingface_hub>=0.25",
    "kanade-tokenizer @ git+https://github.com/frothywater/kanade-tokenizer",
    "better-profanity>=0.7",
]

[project.scripts]
playground = "twitch_playground.main:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["twitch_playground"]

# Allow the kanade-tokenizer git+https direct reference dependency above.
[tool.hatch.metadata]
allow-direct-references = true
